<resources>
    <string name="app_name">Evlo</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="action_save">Save</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>

    <string name="title_expenses">Expenses</string>
    <string name="title_incomes">Incomes</string>
    <string name="title_tags">Tags</string>
    <string name="title_home">Home</string>
    <string name="title_sources">Sources</string>

    <string name="recent_expenses">Recent Expenses</string>
    <string name="recent_incomes">Recent Incomes</string>

    <string name="new_expense">Add New Expense</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="new_income">Add New Income</string>
    <string name="edit_income">Edit Income</string>
    <string name="search_income">Search Income</string>
    <string name="search_expense">Search Expense</string>
    <string name="new_tag">Add New Tag</string>
    <string name="edit_tag">Edit Tag</string>
    <string name="new_source">Add New Source</string>
    <string name="edit_source">Edit Source</string>

    <string name="today">Today</string>
    <string name="empty">It\'s lonely here…</string>
    <string name="rs">\u20B9</string>
    <string name="zero_rs">0.0 \u20B9</string>
    <string name="amount">Amount</string>
    <string name="source">Source</string>
    <string name="tag">Tag</string>
    <string name="notes">Notes</string>
    <string name="name">Name</string>
    <string name="paid_by">Paid by</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="filter_by_source">Filter by Source</string>
    <string name="filter_by_tag">Filter by Tag</string>
    <string name="search_results">Search Results</string>
    <string name="results_overview">Results Overview</string>
    <string name="utilization">Utilization</string>
    <string name="no_data">It\'s lonely here. Start track your expense…</string>

    <string-array name="income_sources">
        <item>SALARY</item>
        <item>CASH BACK</item>
        <item>INTEREST</item>
        <item>ASSETS</item>
        <item>REPAYMENT</item>
        <item>OTHERS</item>
    </string-array>
</resources>