<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </LinearLayout>

    <EditText
        android:id="@+id/date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/today"
        android:inputType="date"></EditText>

    <android.support.design.widget.TextInputLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/amount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:inputType="numberDecimal">

            <requestFocus />
        </EditText>
    </android.support.design.widget.TextInputLayout>

    <TableLayout android:id="@+id/table"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp">

        <TableRow android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
        <TextView
            android:id="@+id/source_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginLeft="4dp"
            android:fontFamily="sans-serif"
            android:text="@string/paid_by"
            android:textColor="@color/item_secondary"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:layout_weight="1"
            android:layout_marginLeft="16dp" />
        </TableRow>

        <TableRow android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="8dp">
        <TextView
            android:id="@+id/tag_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginLeft="4dp"
            android:fontFamily="sans-serif"
            android:text="@string/tag"
            android:textColor="@color/item_secondary"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/tag"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:layout_weight="1"
            android:layout_marginLeft="16dp" />
        </TableRow>

    </TableLayout>

    <android.support.design.widget.TextInputLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/notes"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notes"
            android:inputType="textCapWords"></EditText>
    </android.support.design.widget.TextInputLayout>

</LinearLayout>